# auth

./: .dockerignore  .gitignore  .markdownlint.json  Cargo.toml  README.md  api.json  authcore.Dockerfile  rustfmt.toml
.cargo/: config.toml
.github/: commit_guidelines.md
.github/workflows/: rust.yml
SDK/auth-sdk-js/: package-lock.json  package.json  tsconfig.json
authcore/: Cargo.toml  README.md  build.rs
authcore-service/: .gitignore  Cargo.toml  README.md
authcore-service/src/: authenticator.rs  grpc.rs  http.rs  main.rs  models.rs  state.rs
authcore-service/src/http/modules/: basic_auth.rs  verification.rs
authcore-service/src/http/modules/basic_auth/: register.rs
authcore-service/src/models/: application.rs  error.rs  user.rs
authcore-service/src/routes/: verify.rs
authcore/src/: grpc.rs  main.rs
crypto/: Cargo.toml
crypto/src/: input.rs  jsonwebtoken.rs  jwt.rs  lib.rs  paseto.rs  password.rs  snowflake.rs
crypto/src/input/: password.rs
crypto/src/tokens/: jsonwebtoken.rs  string.rs
dashboard/: package-lock.json  remix.config.js
database/AuthCore/: .env
docs/: Services.md
features/AuthCore/: register.md  webauthn.md
features/AuthCoreService/: webauthn.md
features/LoggingService/: audit-log.md
logging-service/: Cargo.toml
misc/crypto/: Cargo.toml
misc/prisma-cli/: Cargo.toml
platform-service/: Cargo.toml
proto/: authcore.proto
protos/authcore/: authcore.proto  error.proto  session.proto
protos/messaging/: email.proto  messaging.proto
services/auditlog/: Cargo.toml
services/authcore/: Cargo.toml  README.md  TODO.md  build.rs
services/authcore/.sqlx/: query-1c9aa4413bc0a87ff8c40a7a2e74eb16773ea5dbf7c70a7bd5e22229cdeaa0d2.json  query-2b936bd13b6f471c433c22661167fcd0c40f15d631d32f2b20079dfe7fb41689.json  query-4f87e40caad098a6271ea41263144e17de2871eac3e3f1883a04c0ea25bb9ef6.json  query-51153828d238708a356f65832fc0bcc02033617cd2b5c3ed2626d49f28d2107e.json  query-92c44b60be0bad3386f6b6eb9ffa3bdfafbdbede593bc72b88df8a53b2139b97.json  query-a478dd913074b6081157dfe9a912c43e40b1d5f9bba92cf3dcc1f231ea8ce6b9.json  query-af233b2eaa4864afc79ff9e46d2f63844c0324c814e308e3da83c14c19fc4f83.json  query-d6126f7be632d0238336e00fea0596e723b50ebdb48bf95ae9a8069b612671a2.json  query-d9ff6096c77cad1539b7f7a85e2f44b7439ea7017c69227fda36a60a060b9253.json  query-ee07a82ea252e012ace863ee6b4bd4e0f3dbfcfdd54be1cc2ca53394e21275ec.json
services/authcore/docs/: db.drawio
services/authcore/migrations/: 20231013195807_init.sql
services/authcore/src/: api.rs  core.rs  database.rs  grpc.rs  http.rs  main.rs  metrics.rs  models.rs  state.rs
services/authcore/src/api/: grpc.rs  http.rs
services/authcore/src/api/grpc/: platform.rs
services/authcore/src/api/http/: auth.rs  basic.rs  mfa.rs  service.rs  token.rs  two_factor.rs
services/authcore/src/api/http/auth/: login.rs  register.rs
services/authcore/src/api/http/mfa/: create.rs  disable.rs  verify.rs
services/authcore/src/api/http/token/: refresh.rs
services/authcore/src/api/http/two_factor/: create.rs  verify.rs
services/authcore/src/core/: registration.rs  token.rs  totp.rs
services/authcore/src/core/basic/: login.rs  register.rs
services/authcore/src/core/registration/: basic_auth.rs
services/authcore/src/core/registration/basic_auth/: password.rs  username.rs
services/authcore/src/core/token/: access.rs  generic.rs  refresh.rs
services/authcore/src/core/verification/: email.rs
services/authcore/src/database/: models.rs
services/authcore/src/database/models/: application.rs  applications.rs  user.rs  users.rs
services/authcore/src/database/models/application/: basic_auth_settings.rs
services/authcore/src/database/models/applications/: basic_auth_settings.rs
services/authcore/src/database/models/user/: basic_auth.rs
services/authcore/src/database/models/users/: basic_auths.rs  email_addresses.rs
services/authcore/src/database/operations/: query.rs
services/authcore/src/database/operations/command/: application.rs  applications.rs  user.rs  users.rs
services/authcore/src/database/operations/command/application/: basic_auth_settings.rs
services/authcore/src/database/operations/command/user/: basic_auth.rs  email_address.rs
services/authcore/src/database/operations/query/: application.rs  applications.rs  users.rs
services/authcore/src/grpc/: client.rs  error.rs  platform.rs  session.rs
services/authcore/src/grpc/auth/: basic.rs
services/authcore/src/http/: modules.rs  response.rs
services/authcore/src/http/modules/: basic.rs  basic_auth.rs  session.rs  totp.rs  verification.rs
services/authcore/src/http/modules/basic/: login.rs  register.rs
services/authcore/src/http/modules/basic_auth/: register.rs
services/authcore/src/http/modules/session/: refresh.rs
services/authcore/src/http/modules/totp/: backup_codes.rs  delete.rs  setup.rs  verify.rs
services/authcore/src/http/modules/verification/: email.rs
services/authcore/src/http/response/: status_codes.rs
services/authcore/src/models/: application.rs  error.rs  user.rs
services/authcore/src/models/user/: basic_auth.rs  email_address.rs  external_user.rs  token.rs  totp.rs
services/authcore/src/state/: config.rs
services/dashboard/: package-lock.json  package.json
services/logging/: Cargo.toml
services/messaging/: Cargo.toml  README.md  build-protos.sh  package-lock.json  package.json  tsconfig.json
services/platform/: Cargo.toml  README.md  build.rs
services/platform/src/: grpc.rs  http.rs  main.rs  models.rs  state.rs
services/platform/src/http/: modules.rs  response.rs
services/platform/src/http/modules/: organizations.rs
services/platform/src/http/modules/organizations/: applications.rs
services/platform/src/http/response/: status_codes.rs
services/webhook/: Cargo.toml
src/: main.rs
test-env/: README.md  package-lock.json  package.json
testing/: Cargo.toml  README.md
testing/src/: command_handler.rs  main.rs
testing/src/command_handler/: command.rs  commands.rs  context.rs
testing/src/command_handler/commands/: login.rs  register.rs  totp.rs
(+44 files in other folders)
