[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "3.0.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version ="3.0.2", feagtures = ["axum"]}
