[package]
name = "authcore-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
argon2 = "0.5.0"
axum = { version = "0.6.9", features = ["form", "headers"] }
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
prost = "0.11.8"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "uuid",
    "macros",
    "runtime-tokio-native-tls",
    "chrono"
] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "3.0.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
uuid = { version = "1.3.0", features = ["v4"] }
crypto = { path = "../crypto" }
derivative = "2.2.0"
rsa = "0.9.0"
tower = "0.4.13"
console-subscriber = "0.1.8"

[build-dependencies]
tonic-build = "0.9.2"
