[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
chrono = "0.4.24"
data-encoding = "2.3.3"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
sha1 = "0.10.5"
thiserror = "1.0.38"
tokio = "1.28.0"

[dev-dependencies]
rand = "0.8.5"
rsa = "0.9.1"
