[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
data-encoding = "2.3.3"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
rand = "0.8.5"
serde = "1.0.160"
serde_derive = "1.0.162"
serde_json = "1.0.96"
sha1 = "0.10.5"
thiserror = "1.0.38"
tokio = "1.28.0"
failure = "0.1.8"
rusty_paseto = "0.5.0"
idna = "0.3.0"
lazy_static = "1.4.0"
regex = "1.8.1"
futures = "0.3.28"
zxcvbn = "2.2.2"
validator = { version = "0.16.0", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
base64 = "0.21.1"

[dev-dependencies]
rand = "0.8.5"
rsa = "0.9.0"
