[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.123"
rustyline = "12.0.0"
thiserror = "1.0.44"
anyhow = "1.0.72"
strum = "0.25.0"
strum_macros = "0.25.2"
