[package]
name = "authcore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
argon2 = "0.5.0"
axum = { version = "0.6.17", features = ["form", "headers"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
chrono = "0.4.23"
once_cell = "1.17.1"
prost = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
crypto = { workspace = true }
hyper = "0.14.24"
futures = "0.3.28"
zxcvbn = "2.2.2"
validator = { version = "0.16.0", features = ["derive"] }
serde_repr = "0.1.12"
serde_urlencoded = "0.7.1"
time = "0.3.27"
strum = { version = "0.25", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono"
] }

[build-dependencies]
tonic-build = "0.10.2"
