[package]
name = "logging-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.9", features = ["form", "headers"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utoipa = { version = "3.0.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
uuid = { version = "1.3.0", features = ["v4"] }
crypto = { workspace = true }
console-subscriber = "0.1.8"

[build-dependencies]
tonic-build = "0.9.2"
