[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "postgresql"
] }
crypto = { workspace = true }
tokio = { version = "1.28.0", features = ["full"] }
rand = "0.8.5"
tonic = { version = "0.9.2" }
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"
once_cell = "1.17.1"
axum = "0.6.17"
hyper = "0.14.26"

[build-dependencies]
tonic-build = { version = "0.9.2" }
